2008-03-25 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/OpenJumpConfiguration.java,
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/de/latlon/deejump/plugin/style/LayerStyle2SLDPlugIn.java:
      Switched positions of SLD related menu entries.

2008-03-21 mentaer <sstein@geo.unizh.ch>
	  Added category tools from Pirol Projekt
	  added: org/openjump/core/ui/plugin/mousemenu/category/*
	  		 org/openjump/core/apitools/PlugInContextTools.java
	  change:  src/org/openjump/OpenJumpConfiguration.java
	  	  
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  cleaned up the menus (Layer Menu, Category popup menu,
	  Layer popup menu). Moved ExtractLayerInFence and ExtractLayersByGeometry
	  from layer popup to Edit menu. Removed also DeleteAllFeatures from popup.
	  Note: we need to check Postgis Plugin needs (I left the LoadDataSet for 
	  now) and where the MrSID files need to be placed (e.g. mrsidgeoinfo.exe
	  and mrsidgeodecode.exe)
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  replaced JTS version 1.72 by 1.9
	  this required to change as well a classpath in 
	  com.vividsolutions.jump.geom.EnvelopeIntersector 
	  
2008-03-21 mentaer <sstein@geo.unizh.ch>
	  set OJ version to 1.2F to better distinguish bug reports 

2008-03-21 mentaer <sstein@geo.unizh.ch>
      src/com/vividsolutions/jump/workbench/JUMPConfiguration.java:
	  removed WMSQueryPlugIn and AddDatastoreLayerPlugIn from context 
	  menu as those can be called now from new open menu.


2008-03-21 mentaer <sstein@geo.unizh.ch>
      src/org/openjump/core/ui/plugin/edit/CopyBBoxPlugin.java:
      changed the string output to the clipboard according to Jukka's suggestions   
      
2008-03-21 mentaer <sstein@geo.unizh.ch>
      Replaced old PostgreSQL driver (v.2) by newer Version 3.0 
      in OpenJUMP/lib/ directory  
      
2008-03-13 mentaer <sstein@geo.unizh.ch>
      src/com/vividsolutions/jump/workbench/plugin/EnableCheckFactory.java